# ComfyUI-SeedVR2.5_new

./: .gitignore  ADASINGLE_FIX_SUMMARY.md  ARCHITECTURE_MISMATCH_FIX.md  CHANGELOG.md  COMFYUI_CRASH_FIX.md  COMFYUI_NODE_RESTORATION.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DEQUANTIZE_FIX_SUMMARY.md  FINAL_FIX_VERIFICATION.md  FINAL_NVFP4_SOLUTION.md  FINAL_PROJECT_SUMMARY.md  FORCE_NVFP4_IMPLEMENTATION.md  GGUF_SAFETENSORS_ERROR_FIX.md  GUNCELLEME_OZETI_TURKISH.md  INDENTATION_FIX_SUMMARY.md  META_DEVICE_FIX_SUMMARY.md  NATIVE_NVFP4_COMPLETE_IMPLEMENTATION.md  NATIVE_NVFP4_IMPLEMENTATION.md  NATIVE_NVFP4_LOADER_CODE.md  NVFP4_DEQUANTIZATION_FIX.md  NVFP4_FILE_EXPLANATION.md  NVFP4_FINAL_FIX_SUMMARY.md  NVFP4_FIX_SUMMARY.md  NVFP4_IMPLEMENTATION_COMPLETE.md  NVFP4_MODEL_UPDATE.md  NVFP4_REALITY_CHECK.md  NVFP4_SCALING_IMPLEMENTATION.md  NVFP4_TOGGLE_IMPLEMENTATION.md  OFFICIAL_CONFIG_IMPLEMENTATION.md  PROJECT_COMPLETE.md  PR_SUMMARY.md  PURE_PYTORCH_NATIVE_NVFP4.md  QUICK_START_NATIVE_NVFP4.md  README.md  ROPE_DIM_VERIFICATION.md  __init__.py  analyze_issue.md  analyze_nvfp4_situation.md  check_new_nvfp4_model.md  check_nvfp4_model.py  (+3 more)
cpp_runner/: CMakeLists.txt  ProcessEngine.cpp  ProcessEngine.h  main.cpp
docs/: BLACKWELL_OPTIMIZATION.md  INSTALL_TENSORRT_LLM.md  NVFP4_CONVERSION_GUIDE.md  NVFP4_GUIDE.md  NVFP4_NEMOTRON_NATIVE_IMPLEMENTATION.md  NVFP4_QUANTIZATION_METHODS.md  PERFORMANCE_OPTIMIZATION_ROADMAP.md
example_workflows/: nvfp4_blackwell_workflow.json
files_to_commit/: requirements.txt
gui/: README.md  __init__.py  app.py  build_exe.py  config_manager.py  export_encoder.py  folders_dialog.py  gui_requirements.txt  (+7 more)
(+105 files in other folders)
